Fixed styling on nav and dark mode toggle

--- a/src/app/app-sections/dashboard/admin-dashboard/admin-dashboard.component.scss
+++ b/src/app/app-sections/dashboard/admin-dashboard/admin-dashboard.component.scss
@@ -29,7 +29,6 @@
   justify-content: center;
   align-items: center;
   width: 100%;
-  margin-bottom: 20px;
   cursor: pointer;
 
   .dashboard-logo {
@@ -52,7 +51,7 @@
   align-items: center;
   width: 100%;
   margin-top: 30px;
-  gap: 25px;
+  gap: 15px;
 }
 
 .dashboard-nav-link {
